# Projeto_2/src/model/entity/emprestimo.ts
@@ -1,4 +1,4 @@
-import { verificaFormatoData, stringParaData } from "../../util/DataUtil";
+import { verificaFormatoData, stringParaData, calculaDateDevolucao } from "../../util/DataUtil";
 
 verificaFormatoData
 
@@ -10,26 +10,22 @@ export class Emprestimo {
     dataDevolucao: Date;
 
     constructor(id?:number, livroId?:number, usuarioId?:number, dataEmprestimo?:string, dataDevolucao?: string) {
-        this.validateInfo(id, livroId, usuarioId, dataEmprestimo, dataDevolucao);
+        this.validateInfo(id, livroId, usuarioId, dataEmprestimo);
         this.id = id || 0;
         this.livroId = livroId || 0;
         this.usuarioId = usuarioId || 0;
         this.dataEmprestimo = stringParaData(dataEmprestimo || '');
-        this.dataDevolucao = stringParaData(dataDevolucao || '');
+        this.dataDevolucao = calculaDateDevolucao(dataDevolucao || '');
     }
 
-    private validateInfo(id:any, livroId:any, usuarioId:any, dataEmprestimo:any, dataDevolucao: any){
+    private validateInfo(id:any, livroId:any, usuarioId:any, dataEmprestimo:any){
         let error ='';
-        if (typeof id !== 'number' || typeof livroId !== 'number' || typeof usuarioId !== 'number' || typeof dataEmprestimo !== 'string' || typeof dataDevolucao !== 'string') {
+        if (typeof id !== 'number' || typeof livroId !== 'number' || typeof usuarioId !== 'number' || typeof dataEmprestimo !== 'string') {
             error += ("Informações incompletas ou incorretas. ");
         }
 
         if(!verificaFormatoData(dataEmprestimo)){
             error += ("A data do Emprestimo deve possuir o formato: dd/MM/yyyy");
-        }
-
-        if(!verificaFormatoData(dataDevolucao)){
-            error += ("A data da Devolução deve possuir o formato: dd/MM/yyyy");
         }
 
         if(error != ''){
